# claude-desktop-zh-cn

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  SUPPORT.md
.github/: CONTRIBUTING.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  question.yml
.github/workflows/: build-installers.yml  build-rs-installers.yml  check-pr-title.yml  pages.yml  prepare-release.yml
apps/desktop/: DESIGN_SPEC_V1_archived.md  DESIGN_SPEC_V2.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
apps/desktop/src/: App.tsx  constants.ts  index.css  main.tsx  styles.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: ActionButtons.tsx  InstallOptions.tsx  LogPanel.tsx  StatusPanel.tsx  StatusSummary.tsx  TitleBar.tsx
apps/desktop/src/components/ui/: sonner.tsx
apps/desktop/src/hooks/: useActionRunner.ts  useEnvironment.ts  useResourceRelease.ts  useTheme.ts
apps/desktop/src/lib/: motion.ts  platform.ts
apps/desktop/src/utils/: action.ts  status.ts  version.ts
crates/core/: Cargo.toml
crates/core/src/: asar.rs  config.rs  error.rs  frontend_locale.rs  frontend_patch.rs  fs_utils.rs  hardcoded.rs  install.rs  lib.rs  logging.rs  menu_patch.rs  online_dom.rs  record.rs  resources.rs  restore.rs  skills.rs  types.rs
crates/platform/: Cargo.toml
crates/platform/src/: actions.rs  auto_update.rs  elevation.rs  environment.rs  lib.rs  logging.rs  os.rs  paths.rs  resources.rs
crates/platform/src/macos/: mod.rs
crates/platform/src/os/: mod.rs
crates/platform/src/os/macos/: mod.rs
crates/platform/src/os/windows/: install.rs  mod.rs  permissions.rs
crates/platform/src/windows/: backup.rs  install.rs  restore.rs
docs/: index.html
docs/agent/: AGENT_HANDOFF.md  QUICKSTART.md
docs/git/: index.md  spec.md
interview/: frontend-ui-redesign.md  hanhua-patch-client-ui-refactor.md
resources/: frontend-hardcoded-zh-CN.json  frontend-hardcoded-zh-HK.json  frontend-hardcoded-zh-TW.json  frontend-zh-CN.json  frontend-zh-HK.json  frontend-zh-TW.json
scripts/: install_windows.ps1  patch_claude_zh_cn.py  windows-option-matrix.ps1
