[workspace]
members = [
  "./crates/core",
  "./crates/platform",
  "./apps/desktop/src-tauri",
]
resolver = "2"

[workspace.package]
version = "1.2.3"
edition = "2021"
authors = ["javaht"]
license = "AGPL-3.0-or-later"

[workspace.dependencies]
aho-corasick = "1.1.4"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
dirs = "5"
hex = "0.4"
plist = "1.7"
regex = "1.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
