[package]
name = "claude-zh-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
aho-corasick.workspace = true
chrono.workspace = true
hex.workspace = true
plist.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true
walkdir.workspace = true
