[package]
name = "claude-desktop-zh-cn"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "claude_desktop_zh_cn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
claude-zh-core = { path = "../../../crates/core" }
claude-zh-platform = { path = "../../../crates/platform" }
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = [] }
thiserror.workspace = true
